--- a/StudentGrade.html
+++ b/StudentGrade.html
@@ -29,8 +29,8 @@
                           <div style="text-align:center; margin-left:-30px">Name of Student</div>
                           <div style="text-align:center; margin-left:-30px">NISN</div>
                      </ul>
-                     <input style=" width:150px; height:40px; background:blue" type="submit" value="Grade"/><br/>
-                     <input style=" width:150px; height:40px;"  type="submit" value="Attendance"/><br/>
+                     <input style=" width:150px; height:40px; " type="submit" value="Grade"/><br/>
+                     <input style=" width:150px; height:40px; background:blue"  type="submit" value="Attendance"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Schedule"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Materials"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Assignment"/><br/>
