Student is done

--- a/StudentGrade.html
+++ b/StudentGrade.html
@@ -29,8 +29,8 @@
                           <div style="text-align:center; margin-left:-30px">Name of Student</div>
                           <div style="text-align:center; margin-left:-30px">NISN</div>
                      </ul>
-                     <input style=" width:150px; height:40px; " type="submit" value="Grade"/><br/>
-                     <input style=" width:150px; height:40px; background:blue"  type="submit" value="Attendance"/><br/>
+                     <input style=" width:150px; height:40px; background:blue" type="submit" value="Grade"/><br/>
+                     <input style=" width:150px; height:40px; "  type="submit" value="Attendance"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Schedule"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Materials"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Assignment"/><br/>
@@ -39,11 +39,11 @@
                  <th colspan="2" width="10000px" height="650px" >
               <table border="1" >
                 <tr>
-                  <th width="2000px">Code Subject</th>
-                  <th width="2000px">Subject Name</th>
-                  <th width="2000px">Total Attendance</th>
-                  <th width="2000px">Total Meet in Class</th>
-                  <th width="2000px">Persantage</th>
+                  <th width="2000px">Subject</th>
+                  <th width="2000px">Grade</th>
+                  <th width="2000px">Index</th>
+                  <!-- <th width="2000px">Total Meet in Class</th>
+                  <th width="2000px">Persantage</th> -->
                 </tr>
               </table>
               <table >
@@ -51,8 +51,8 @@
                   <th width="2000px" height="650px"></th>
                   <th width="2000px" height="650px"></th>
                   <th width="2000px" height="650px"></th>
-                  <th width="2000px" height="650px"></th>
-                  <th width="2000px" height="650px"></th>
+                  <!-- <th width="2000px" height="650px"></th>
+                  <th width="2000px" height="650px"></th> -->
                 </tr>
               </table>
               </th>
