--- a/StudentMaterial.html
+++ b/StudentMaterial.html
@@ -30,20 +30,20 @@
                           <div style="text-align:center; margin-left:-30px">NISN</div>
                      </ul>
                      <input style=" width:150px; height:40px; " type="submit" value="Grade"/><br/>
-                     <input style=" width:150px; height:40px; background:blue"  type="submit" value="Attendance"/><br/>
+                     <input style=" width:150px; height:40px; "  type="submit" value="Attendance"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Schedule"/><br/>
-                     <input style=" width:150px; height:40px;"  type="submit" value="Materials"/><br/>
+                     <input style=" width:150px; height:40px; background:blue"  type="submit" value="Materials"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Assignment"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Profile"/><br/> </th>
 
                  <th colspan="2" width="10000px" height="650px" >
               <table border="1" >
                 <tr>
-                  <th width="2000px">Code Subject</th>
-                  <th width="2000px">Subject Name</th>
-                  <th width="2000px">Total Attendance</th>
-                  <th width="2000px">Total Meet in Class</th>
-                  <th width="2000px">Persantage</th>
+                  <th width="2000px">Code Materials</th>
+                  <th width="2000px">Materials Name</th>
+                  <th width="2000px">Teacher</th>
+                  <th width="2000px">Upload On</th>
+                  <!-- <th width="2000px">Persantage</th>  -->
                 </tr>
               </table>
               <table >
@@ -52,7 +52,7 @@
                   <th width="2000px" height="650px"></th>
                   <th width="2000px" height="650px"></th>
                   <th width="2000px" height="650px"></th>
-                  <th width="2000px" height="650px"></th>
+                  <!-- <th width="2000px" height="650px"></th> -->
                 </tr>
               </table>
               </th>
