--- a/StudentProfile.html
+++ b/StudentProfile.html
@@ -30,20 +30,27 @@
                           <div style="text-align:center; margin-left:-30px">NISN</div>
                      </ul>
                      <input style=" width:150px; height:40px; " type="submit" value="Grade"/><br/>
-                     <input style=" width:150px; height:40px; background:blue"  type="submit" value="Attendance"/><br/>
-                     <input style=" width:150px; height:40px;"  type="submit" value="Schedule"/><br/>
-                     <input style=" width:150px; height:40px;"  type="submit" value="Materials"/><br/>
+                     <input style=" width:150px; height:40px; "  type="submit" value="Attendance"/><br/>
+                     <input style=" width:150px; height:40px; "  type="submit" value="Schedule"/><br/>
+                     <input style=" width:150px; height:40px; "  type="submit" value="Materials"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Assignment"/><br/>
-                     <input style=" width:150px; height:40px;"  type="submit" value="Profile"/><br/> </th>
+                     <input style=" width:150px; height:40px; background:blue"  type="submit" value="Profile"/><br/> </th>
 
                  <th colspan="2" width="10000px" height="650px" >
-              <table border="1" >
+                   <h2> NIS           : Student NIS </h2>
+                   <h2> Full Name     : Student Name</h2>
+                   <h2> Class         : Student Class</h2>
+                   <h2> Birthday      : Student Birthday</h2>
+                   <h2> Status        : Student Status</h2>
+              <!-- <table border="1" >
                 <tr>
+                  <th width="2000px">Days</th>
+                  <th width="2000px">Time</th>
+                  <th width="2000px">Room</th>
                   <th width="2000px">Code Subject</th>
-                  <th width="2000px">Subject Name</th>
-                  <th width="2000px">Total Attendance</th>
-                  <th width="2000px">Total Meet in Class</th>
-                  <th width="2000px">Persantage</th>
+                  <th width="2000px">Subject</th>
+                  <th width="2000px">Class</th>
+                  <th width="2000px">Status</th>
                 </tr>
               </table>
               <table >
@@ -53,8 +60,10 @@
                   <th width="2000px" height="650px"></th>
                   <th width="2000px" height="650px"></th>
                   <th width="2000px" height="650px"></th>
+                  <th width="2000px" height="650px"></th>
+                  <th width="2000px" height="650px"></th>
                 </tr>
-              </table>
+              </table> -->
               </th>
          </table>
 
