--- a/ParentHome.html
+++ b/ParentHome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Student</title>
+    <title>Login Parent</title>
     <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
@@ -12,31 +12,29 @@
 <table>
     <div class=" ">
       <tr>
-        <th style="font-size : 200%" width="1000px">Student</th>
+        <th style="font-size : 200%" width="1000px">Parent</th>
         <th style="text-align : center; font-size : 200%" width="5000px">I-School</th>
         <th><button type="button" style="background:red; font-size : 20px; width:100px; height:50px">Log Out</button></th>
       </tr>
     </div>
   </table>
 
-  <table>
+  <table >
              <tr>
                  <th rowspan="2" width="250px" ><form>
 
-                      <div style="margin-left:1px; font:100; margin-top:-170px"></div>
-                      <img src="student.png" alt="image" title="Legend" width="200" height="200"/>
+                      <div style="margin-left:1px; font:100; margin-top:-250px"></div>
+                      <img src="logo orang tua.png" alt="image" title="Legend" width="200" height="200"/>
                      <ul>
-                          <div style="text-align:center; margin-left:-30px">Name of Student</div>
-                          <div style="text-align:center; margin-left:-30px">NISN</div>
+                          <div style="text-align:center; margin-left:-30px">Name of Parent</div>
+                          <div style="text-align:center; margin-left:-30px">Parent of Student Name</div>
                      </ul>
                      <input style=" width:150px; height:40px;" type="submit" value="Grade"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Attendance"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Schedule"/><br/>
-                     <input style=" width:150px; height:40px;"  type="submit" value="Materials"/><br/>
-                     <input style=" width:150px; height:40px;"  type="submit" value="Assignment"/><br/>
                      <input style=" width:150px; height:40px;"  type="submit" value="Profile"/><br/> </th>
 
-                 <th colspan="2" width="10000px" height="650px" > INFORMATION </td>
+                 <th colspan="2" width="10000px" height="650px" >  </td>
          </table>
 </body>
 </html>
