repair page teacher

--- a/Assignment2 GUI/teacher.gradestudent.html
+++ b/Assignment2 GUI/teacher.gradestudent.html
@@ -24,7 +24,7 @@
                 <td rowspan="2" width="250px" ><form>
 
                       <div style=" margin-top:-15px; "></div>
-                      <img src="teacher.png" alt="image" title="Legend" width="200" height="200" style ="padding-left=100px"/>
+                      <img src="../img/teacher.png" alt="image" title="Legend" width="200" height="200" style ="padding-left=100px"/>
                      <ul>
                           <div style="text-align:center; margin-left:-30px">Name of Teacher</div>
                           <div style="text-align:center; margin-left:-30px">Teacher NIP</div>
