--- a/Assignment2 GUI/Teacher.html
+++ b/Assignment2 GUI/Teacher.html
@@ -24,7 +24,7 @@
                  <th rowspan="2" width="250px" ><form>
 
                       <div style="margin-left:1px; font:100; margin-top:-10px"></div>
-                      <img src="teacher.png" alt="image" title="Legend" width="200" height="200"/>
+                      <img src="../img/teacher.png" alt="image" title="Legend" width="200" height="200"/>
                      <ul>
                           <div style="text-align:center; margin-left:-30px">Name of Teacher</div>
                           <div style="text-align:center; margin-left:-30px">Teacher NIP</div>
