--- a/Assignment2 GUI/StudentGrade.html
+++ b/Assignment2 GUI/StudentGrade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Student</title>
+    <title>Student - Grade</title>
     <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
                  <th rowspan="2" width="250px" >
                    <form>
                       <div style="margin-left:1px; font:100; margin-top:-170px"></div>
-                      <img src="student.png" alt="image" title="Legend" width="200" height="200"/>
+                      <img src="../img/student.png" alt="image" title="Legend" width="200" height="200"/>
                      <ul>
                           <div style="text-align:center; margin-left:-30px">Name of Student</div>
                           <div style="text-align:center; margin-left:-30px">NISN</div>
