--- a/Assignment2 GUI/Teacher.html
+++ b/Assignment2 GUI/Teacher.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Teacher</title>
+    <title>Teacher Home</title>
     <link rel="stylesheet" href="teacher.css">
 </head>
 <body>
