--- a/Assignment2 GUI/teacher.gradestudent.html
+++ b/Assignment2 GUI/teacher.gradestudent.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Teacher(Grade Student)</title>
+    <title>Teacher - Grade Student</title>
     <link rel="stylesheet" href="teacher.css">
 </head>
 <body>
@@ -26,8 +26,8 @@
                       <div style=" margin-top:-15px; "></div>
                       <img src="../img/teacher.png" alt="image" title="Legend" width="200" height="200" style ="padding-left=100px"/>
                      <ul>
-                          <div style="text-align:center; margin-left:-30px">Name of Teacher</div>
-                          <div style="text-align:center; margin-left:-30px">Teacher NIP</div>
+                          <p style="text-align:center; margin-left:-30px">Name of Teacher</p>
+                          <p style="text-align:center; margin-left:-30px">Teacher NIP</p>
                      </ul>
                      <input style=" width:150px; height:40px; margin-bottom:8px; margin-left:50px; background:orange "  type="submit" value="Grade Student"/><br/>
                      <input style=" width:150px; height:40px; margin-bottom:8px; margin-left:50px;"  type="submit" value="Attendance Student"/><br/>
