--- a/Assignment2 GUI/ParentProfile.html
+++ b/Assignment2 GUI/ParentProfile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Parent - Attendance</title>
+    <title>Student - Profile</title>
     <link rel="stylesheet" href="Style/style.css">
     <style>
 a:link, a:visited {
@@ -38,25 +38,32 @@ a:hover, a:active {
              <tr>
                  <th rowspan="2" width="250px" >
                    <form>
-                      <div style="margin-left:1px; font:100; margin-top:-250px"></div>
+                      <div style="margin-left:1px; font:100; margin-top:-170px"></div>
                       <img src="../img/parent.png" alt="image" title="Legend" width="150" height="150"/>
                      <ul>
                           <div style="text-align:center; margin-left:-30px">Name of Student</div>
-                          <div style="text-align:center; margin-left:-30px">Parent of Student Name</div>
+                          <div style="text-align:center; margin-left:-30px">NISN</div>
                      </ul>
                      <a href="" target="_blank" >Grade</a>
-                     <a href="" target="_blank" style=" background:blue">Attendance</a>
+                     <a href="" target="_blank" >Attendance</a>
                      <a href="" target="_blank" >Schedule</a>
-                     <a href="" target="_blank" >Profile</a>
+                     <a href="" target="_blank" style=" background:blue">Profile</a>
 
                  <th colspan="2" width="10000px" height="650px" >
-              <table border="1" >
+                   <h2> NIS           : Student NIS </h2>
+                   <h2> Full Name     : Student Name</h2>
+                   <h2> Class         : Student Class</h2>
+                   <h2> Birthday      : Student Birthday</h2>
+                   <h2> Status        : Student Status</h2>
+              <!-- <table border="1" >
                 <tr>
+                  <th width="2000px">Days</th>
+                  <th width="2000px">Time</th>
+                  <th width="2000px">Room</th>
                   <th width="2000px">Code Subject</th>
-                  <th width="2000px">Subject Name</th>
-                  <th width="2000px">Total Attendance</th>
-                  <th width="2000px">Total Meet in Class</th>
-                  <th width="2000px">Persantage</th>
+                  <th width="2000px">Subject</th>
+                  <th width="2000px">Class</th>
+                  <th width="2000px">Status</th>
                 </tr>
               </table>
               <table >
@@ -66,8 +73,10 @@ a:hover, a:active {
                   <th width="2000px" height="650px"></th>
                   <th width="2000px" height="650px"></th>
                   <th width="2000px" height="650px"></th>
+                  <th width="2000px" height="650px"></th>
+                  <th width="2000px" height="650px"></th>
                 </tr>
-              </table>
+              </table> -->
               </th>
          </table>
 
