--- a/Assignment2 GUI/StudentAttendance.html
+++ b/Assignment2 GUI/StudentAttendance.html
@@ -6,28 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Student - Attendance</title>
     <link rel="stylesheet" href="Style/style.css">
-    <style>
-a:link, a:visited {
-  color: black;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  border-style: solid;
-  margin: 5px;
-  height: 20px;
-  width: 150px;
-}
-a:hover, a:active {
-  background-color: red;
-}
-</style>
 </head>
 <body>
 
 <table>
     <div class=" ">
       <tr>
+        <th style="font-size : 200%" width="1000px">Student</th>
         <th style="text-align : center; font-size : 200%" width="5000px">I-School</th>
         <th><button type="button" style="background:red; font-size : 20px; width:100px; height:50px">Log Out</button></th>
       </tr>
@@ -44,12 +29,12 @@ a:hover, a:active {
                           <div style="text-align:center; margin-left:-30px">Name of Student</div>
                           <div style="text-align:center; margin-left:-30px">NISN</div>
                      </ul>
-                     <a href="" target="_blank" >Grade</a>
-                     <a href="" target="_blank" style=" background:blue">Attendance</a>
-                     <a href="" target="_blank" >Schedule</a>
-                     <a href="" target="_blank" >Materials</a>
-                     <a href="" target="_blank" >Assignment</a>
-                     <a href="" target="_blank" >Profile</a>
+                     <input style=" width:150px; height:40px; " type="submit" value="Grade"/><br/>
+                     <input style=" width:150px; height:40px; background:blue"  type="submit" value="Attendance"/><br/>
+                     <input style=" width:150px; height:40px;"  type="submit" value="Schedule"/><br/>
+                     <input style=" width:150px; height:40px;"  type="submit" value="Materials"/><br/>
+                     <input style=" width:150px; height:40px;"  type="submit" value="Assignment"/><br/>
+                     <input style=" width:150px; height:40px;"  type="submit" value="Profile"/><br/> </th>
 
                  <th colspan="2" width="10000px" height="650px" >
               <table border="1" >
