--- a/Assignment2 GUI/teacher.gradestudent.html
+++ b/Assignment2 GUI/teacher.gradestudent.html
@@ -4,74 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Student - Grade</title>
-    <link rel="stylesheet" href="Style/style.css">
-    <style>
-a:link, a:visited {
-  color: black;
-  padding: 10px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  border-style: solid;
-  margin: 5px;
-  height: 20px;
-  width: 150px;
-}
-a:hover, a:active {
-  background-color: red;
-}
-</style>
+    <title>Teacher - Grade Student</title>
+    <link rel="stylesheet" href="teacher.css">
 </head>
 <body>
 
 <table>
     <div class=" ">
       <tr>
-        <th style="text-align : center; font-size : 200%" width="5000px">I-School</th>
-        <th><button type="button" style="background:red; font-size : 20px; width:100px; height:50px">Log Out</button></th>
+        <th style="font-size : 200%" width="1000px">Teacher</th>
+            <th style="text-align : center; font-size : 200%" width="5000px">I-School</th>
+        <th><button type="button" style="background:orange  ; font-size : 20px; width:100px; height:50px">Log Out</button></th>
       </tr>
     </div>
-  </table>
+</table>
 
-  <table>
+  <table border="2">
              <tr>
-                 <th rowspan="2" width="250px" >
-                   <form>
-                      <div style="margin-left:1px; font:100; margin-top:-170px"></div>
-                      <img src="../img/teacher.png" alt="image" title="Legend" width="200" height="200"/>
-                     <ul>
-                          <div style="text-align:center; margin-left:-30px">Name of Teacher</div>
-                          <div style="text-align:center; margin-left:-30px">NIP</div>
-                     </ul>
-                     <a href="" target="_blank" style=" background:blue">Grade</a>
-                     <a href="" target="_blank" >Attendance</a>
-                     <a href="" target="_blank" >Schedule</a>
-                     <a href="" target="_blank" >Materials</a>
-                     <a href="" target="_blank" >Assignment</a>
-                     <a href="" target="_blank" >Profile</a>
+                <td rowspan="2" width="250px" ><form>
 
+                      <div style=" margin-top:-15px; "></div>
+                      <img src="../img/teacher.png" alt="image" title="Legend" width="200" height="200" style ="padding-left=100px"/>
+                     <ul>
+                          <p style="text-align:center; margin-left:-30px">Name of Teacher</p>
+                          <p style="text-align:center; margin-left:-30px">Teacher NIP</p>
+                     </ul>
+                     <input style=" width:150px; height:40px; margin-bottom:8px; margin-left:50px; background:orange "  type="submit" value="Grade Student"/><br/>
+                     <input style=" width:150px; height:40px; margin-bottom:8px; margin-left:50px;"  type="submit" value="Attendance Student"/><br/>
+                     <input style=" width:150px; height:40px; margin-bottom:8px; margin-left:50px"  type="submit" value="Schedule"/><br/>
+                     <input style=" width:150px; height:40px; margin-bottom:8px; margin-left:50px"  type="submit" value="Materials"/><br/> 
+                     <input style=" width:150px; height:40px; margin-bottom:8px; margin-left:50px"  type="submit" value="Assignment"/><br/>
+                     <input style=" width:150px; height:40px; margin-bottom:8px; margin-left:50px"  type="submit" value="Profile"/><br/> 
+                </td>
+                
                  <th colspan="2" width="10000px" height="650px" >
-              <table border="1" >
-                <tr>
-                  <th width="2000px">Subject</th>
-                  <th width="2000px">Grade</th>
-                  <th width="2000px">Index</th>
-                  <!-- <th width="2000px">Total Meet in Class</th>
-                  <th width="2000px">Persantage</th> -->
-                </tr>
-              </table>
-              <table >
-                <tr>
-                  <th width="2000px" height="650px"></th>
-                  <th width="2000px" height="650px"></th>
-                  <th width="2000px" height="650px"></th>
-                  <!-- <th width="2000px" height="650px"></th>
-                  <th width="2000px" height="650px"></th> -->
-                </tr>
-              </table>
-              </th>
+                        <table border="1" >
+                                <tr>
+                                  <th width="2000px">Subject</th>
+                                  <th width="2000px">Grade</th>
+                                  <th width="2000px">Index</th>
+                                  <!-- <th width="2000px">Total Meet in Class</th>
+                                  <th width="2000px">Persantage</th> -->
+                                </tr>
+                              </table>
+                              <table >
+                                <tr>
+                                  <th width="2000px" height="650px"></th>
+                                  <th width="2000px" height="650px"></th>
+                                  <th width="2000px" height="650px"></th>
+                                  <!-- <th width="2000px" height="650px"></th>
+                                  <th width="2000px" height="650px"></th> -->
+                                </tr>
+                              </table>
+                 </th>
+                 
          </table>
+         <center><nav> Name of School </nav></center>
 
 
 </body>
