Logout dah di perbaiki

--- a/Assignment2 GUI/StudentMaterial.html
+++ b/Assignment2 GUI/StudentMaterial.html
@@ -45,6 +45,13 @@
                   <th width="2000px">Upload On</th>
                   <!-- <th width="2000px">Persantage</th>  -->
                 </tr>
+                <tr>
+                  <th width="2000px">Code Materials</th>
+                  <th width="2000px">Materials Name</th>
+                  <th width="2000px">Teacher</th>
+                  <th width="2000px">Upload On</th>
+                  <!-- <th width="2000px">Persantage</th>  -->
+                </tr>
               </table>
               <table >
                 <tr>
